Refactor and removed legacy internals and libraries also moved to JavaFX16